# 8020-Fetcher

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: ISSUES.md  ROADMAP.md
plans/: sample_plan_olympic_l0.csv
src/eticu/: cli.py  config.py  convert.py  download.py  fit_parse.py  intervals_client.py  models.py  plan.py  scrape.py  upload.py  zones.py
tests/: download_fixtures.py  test_convert.py  test_fit_parse.py  test_intervals_client.py  test_zones.py
tests/fixtures/: CCI1.FIT
